[package]
name = "wrelay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "client-legacy"] }
http-body-util = "0.1"
bytes = "1.6"
anyhow = "1.0"
http = "1.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'